@@ -289,6 +289,7 @@ typedef struct
 #define ZBX_FLAGS_DB_EVENT_UNSET		0x0000
 #define ZBX_FLAGS_DB_EVENT_CREATE		0x0001
 #define ZBX_FLAGS_DB_EVENT_NO_ACTION		0x0002
+#define ZBX_FLAGS_DB_EVENT_LINKED	0x0004
 	zbx_uint64_t		flags;
 }
 DB_EVENT;
@@ -501,12 +502,11 @@ typedef struct
 #define ZBX_FLAGS_TRIGGER_DIFF_UPDATE_LASTCHANGE		0x0002
 #define ZBX_FLAGS_TRIGGER_DIFF_UPDATE_STATE			0x0004
 #define ZBX_FLAGS_TRIGGER_DIFF_UPDATE_ERROR			0x0008
-#define ZBX_FLAGS_TRIGGER_DIFF_UPDATE_PROBLEM_COUNT		0x0010
 #define ZBX_FLAGS_TRIGGER_DIFF_UPDATE										\
 		(ZBX_FLAGS_TRIGGER_DIFF_UPDATE_VALUE | ZBX_FLAGS_TRIGGER_DIFF_UPDATE_LASTCHANGE | 		\
-		ZBX_FLAGS_TRIGGER_DIFF_UPDATE_STATE | ZBX_FLAGS_TRIGGER_DIFF_UPDATE_ERROR |			\
-		ZBX_FLAGS_TRIGGER_DIFF_UPDATE_PROBLEM_COUNT)
-#define ZBX_FLAGS_TRIGGER_DIFF_RECALCULATE_PROBLEM_COUNT	0x1000
+		ZBX_FLAGS_TRIGGER_DIFF_UPDATE_STATE | ZBX_FLAGS_TRIGGER_DIFF_UPDATE_ERROR)
+#define ZBX_FLAGS_TRIGGER_DIFF_UPDATE_PROBLEM_COUNT		0x1000
+#define ZBX_FLAGS_TRIGGER_DIFF_RECALCULATE_PROBLEM_COUNT	0x2000
 	zbx_uint64_t			flags;
 }
 zbx_trigger_diff_t;
