@@ -121,8 +121,6 @@ static int	zbx_process_trigger(struct _DC_TRIGGER *trigger, zbx_vector_ptr_t *di
 
 	if (0 != (event_flags & ZBX_FLAGS_TRIGGER_CREATE_TRIGGER_EVENT))
 	{
-		flags |= ZBX_FLAGS_TRIGGER_DIFF_UPDATE_LASTCHANGE;
-
 		add_event(EVENT_SOURCE_TRIGGERS, EVENT_OBJECT_TRIGGER, trigger->triggerid,
 				&trigger->timespec, new_value, trigger->description,
 				trigger->expression_orig, trigger->recovery_expression_orig,
@@ -136,11 +134,8 @@ static int	zbx_process_trigger(struct _DC_TRIGGER *trigger, zbx_vector_ptr_t *di
 				&trigger->timespec, new_state, NULL, NULL, NULL, 0, 0, NULL, 0, NULL);
 	}
 
-	if (0 != (flags & ZBX_FLAGS_TRIGGER_DIFF_UPDATE))
-	{
-		zbx_append_trigger_diff(diffs, trigger->triggerid, trigger->priority, flags, trigger->value,
-				new_state, trigger->timespec.sec, new_error);
-	}
+	zbx_append_trigger_diff(diffs, trigger->triggerid, trigger->priority, flags, trigger->value, new_state,
+			trigger->timespec.sec, new_error);
 
 	ret = SUCCEED;
 out:
